# injective-nova-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  roadmap.md
scripts/: balance.py  new_key.py  send.py
src/copilot/: __init__.py  agent.py  cli.py  injective_client.py  llm.py  mcp_client.py  prompts.py  schema.py
tests/: test_parser_live.py  test_smoke.py
