[project]
name = "nova-copilot"
version = "0.0.1"
description = "Natural-language DeFi copilot for the Injective chain"
readme = "README.md"
authors = [{ name = "jack", email = "1147858240@qq.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["injective", "defi", "ai", "copilot", "mcp", "blockchain"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0",           # MCP protocol client → Injective MCP server
    "httpx>=0.27",        # HTTP for Injective RPC + node queries
    "typer>=0.12",        # CLI
    "rich>=13.7",         # terminal UX for the approval gate
    "pydantic>=2.7",      # intent & plan schemas
    "jinja2>=3.1",        # prompt templates for the intent parser
    "python-dotenv>=1.0", # .env loading
]

[project.optional-dependencies]
llm-local = ["ollama>=0.3"]
llm-cloud = ["openai>=1.30", "anthropic>=0.30"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
copilot = "copilot.cli:app"

[project.urls]
Homepage = "https://github.com/jinguanghui123/injective-nova-copilot"
Repository = "https://github.com/jinguanghui123/injective-nova-copilot"
Issues = "https://github.com/jinguanghui123/injective-nova-copilot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
